# rsyn

./: .gitignore  Cargo.toml  NEWS.md  README.md
.github/workflows/: rust.yml  test.yml  unix.yml  windows.yml
doc/: protocol-notes.md
src/: address.rs  client.rs  connection.rs  flist.rs  lib.rs  localtree.rs  logging.rs  main.rs  mux.rs  options.rs  parser.rs  proto.rs  statistics.rs  sums.rs  varint.rs
tests/: interop.rs  no_logger.rs  vs_rsync.rs
unix_mode/: Cargo.toml
unix_mode/src/: lib.rs
