[package]
name = "rsyn"
version = "0.1.0"
authors = ["Martin Pool <mbp@google.com>"]
edition = "2018"
publish = false
description = "[pre-alpha] Wire-compatible rsync client"
categories = ["filesystem", "network-programming"]

[dependencies]
chrono = "0.4.11"
fern = "0.6"
hex = "0.4.2"
log = "0.4"
structopt = { version = "0.3" , features = [ "wrap_help", "suggestions" ]}
unix_mode = { path = "unix_mode" }
anyhow = "1.0.28"

[dev-dependencies]
