[package]
authors = ["Martin Pool <mbp@google.com>"]
categories = [
    "filesystem",
    "network-programming",
]
description = "[pre-alpha] Wire-compatible rsync client"
edition = "2018"
license = "Apache-2.0"
name = "rsyn"
publish = false
version = "0.1.0"
repository = "https://github.com/sourcefrog/rsyn"
homepage = "https://github.com/sourcefrog/rsyn/blob/master/README.md"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
fern = "0.6"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4"
regex = "1.3.7"
unix_mode = "0.1.0"

[dependencies.structopt]
features = [
    "wrap_help",
    "suggestions",
]
version = "0.3"

[dev-dependencies]
tempdir = "0.3.7"

