[package]
authors = ["Martin Pool <mbp@google.com>"]
categories = [
    "filesystem",
    "network-programming",
]
description = "[pre-alpha] Wire-compatible rsync client"
edition = "2018"
license = "Apache-2.0"
name = "rsyn"
publish = true
version = "0.0.2"
repository = "https://github.com/sourcefrog/rsyn"
homepage = "https://github.com/sourcefrog/rsyn/blob/master/README.md"
readme = "README.md"

[dependencies]
anyhow = "1.0.28"
chrono = "0.4.11"
crossbeam = "0.7.3"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4"
md4 = "0.8.0"
regex = "1.3.7"
shell-words = "1.0.0"
tracing = "0.1.14"
tracing-appender = "0.1.0"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.5"
unix_mode = "0.1.1"

[dependencies.structopt]
features = [
    "wrap_help",
    "suggestions",
]
version = "0.3"

[dev-dependencies]
tempdir = "0.3.7"
