[package]
name = "unix_mode"
version = "0.1.0"
authors = ["Martin Pool <mbp@google.com>"]
edition = "2018"
description = "Decode Unix file mode bits (even on non-Unix platforms)"
license = "Apache-2.0"
publish = false
repository = "https://github.com/sourcefrog/rsyn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
